<resources>
    <string name="app_name">RiderApp</string>
    <!-- Strings related to login -->
    <string name="login">Логин</string>
    <string name="password">Пароль</string>
    <string name="action_sign_in">Войти</string>
    <string name="action_register">Стать курьером</string>
    <string name="sign_in_troubles"><u>Не удалось войти?</u></string>

    <string name="orders_bottom_menu">Заказы</string>
    <string name="history_bottom_menu">История</string>
    <string name="stats_bottom_menu">Отчеты</string>
    <string name="exit_bottom_menu">Выход</string>

    <string name="stats_title">Отчет курьера</string>
    <string name="stats_orders_completed">Выполнено заказово за смену:</string>
    <string name="stats_cash_received">Получено наличных денег:</string>

    <string name="order_waiting">Заказ ожидается</string>
    <string name="more_info">Подробнее</string>
    <string name="address">Адрес:</string>
    <string name="restaurant">Ресторан</string>
    <string name="arrival">Прибытие</string>
</resources>
